--- a/index.html
+++ b/index.html
@@ -305,15 +305,6 @@
                       </figure>
                     </div>
 
-                    <!-- HTA -->
-                    <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
-                      <figure class="image"
-                        style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
-                        <img src="static/images/hta.png" alt="Hightech Agenda Bayern"
-                          style="max-height:80px; max-width:130px; object-fit:contain;">
-                      </figure>
-                    </div>
-
                   </div>
                 </div>
               </section>
@@ -564,41 +555,60 @@
       </div>
     </section>
 
-    <div class="has-text-centered" style="margin-top:1.5rem;">
-      <a href="https://www.thi.de/forschung/aimotion/datarecording/" target="_blank" rel="noopener noreferrer"
-        style="color:#1a73e8; text-decoration:none; font-weight:500;">
-        🔒 Data Privacy Policy (THI)
-      </a>
-    </div>
 
+    <section class="section" style="background-color: white;">
+      <div class="container has-text-centered">
+        <h2 class="title is-4">In Collaboration With</h2>
+        <div class="columns is-centered is-multiline is-vcentered" style="margin-top: 1.5rem;">
 
-    <footer class="footer">
-      <div class="container">
-        <div class="columns is-centered">
-          <div class="column is-8">
-            <div class="content">
-
-              <p>
-                This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template"
-                  target="_blank">Academic Project Page Template</a> which was adopted from the <a
-                  href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
-                You are free to borrow the source code of this website, we just ask that you link back to this page in
-                the footer. <br> This website is licensed under a <a rel="license"
-                  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
-                  Commons Attribution-ShareAlike 4.0 International License</a>.
-              </p>
-
-            </div>
+          <!-- HTA -->
+          <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+            <figure class="image"
+              style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
+              <img src="static/images/hta.png" alt="Hightech Agenda Bayern"
+                style="max-height:80px; max-width:130px; object-fit:contain;">
+            </figure>
           </div>
-        </div>
-      </div>
-    </footer>
 
-    <!-- Statcounter tracking code -->
 
-    <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
 
-    <!-- End of Statcounter Code -->
+          <div class="has-text-centered" style="margin-top:1.5rem;">
+            <a href="https://www.thi.de/forschung/aimotion/datarecording/" target="_blank" rel="noopener noreferrer"
+              style="color:#1a73e8; text-decoration:none; font-weight:500;">
+              🔒 Data Privacy Policy (THI)
+            </a>
+          </div>
+
+
+          <footer class="footer">
+            <div class="container">
+              <div class="columns is-centered">
+                <div class="column is-8">
+                  <div class="content">
+
+                    <p>
+                      This page was built using the <a
+                        href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic
+                        Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io"
+                        target="_blank">Nerfies</a> project page.
+                      You are free to borrow the source code of this website, we just ask that you link back to this
+                      page in
+                      the footer. <br> This website is licensed under a <a rel="license"
+                        href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
+                        Commons Attribution-ShareAlike 4.0 International License</a>.
+                    </p>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </footer>
+
+          <!-- Statcounter tracking code -->
+
+          <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
+
+          <!-- End of Statcounter Code -->
 
 </body>
 
