--- a/index.html
+++ b/index.html
@@ -570,6 +570,24 @@
             </figure>
           </div>
 
+          <!-- bmdv -->
+          <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+            <figure class="image"
+              style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
+              <img src="static/images/bmdv.png" alt="Hightech Agenda Bayern"
+                style="max-height:80px; max-width:130px; object-fit:contain;">
+            </figure>
+          </div>
+
+          <!-- bysmwk -->
+          <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
+            <figure class="image"
+              style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
+              <img src="static/images/bysmwk.png.jpg" alt="Hightech Agenda Bayern"
+                style="max-height:80px; max-width:130px; object-fit:contain;">
+            </figure>
+          </div>
+
           <section class="section" style="background-color: white;">
             <div class="container has-text-centered">
               <h2 class="title is-4">Data Privacy:</h2>
