--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   <title>UrbanIng-V2X</title>
 
   <!-- Favicon and App Icons -->
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
-  <link rel="apple-touch-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/thi_logo.png">
+  <link rel="apple-touch-icon" href="static/images/thi_logo.png">
 
   <!-- Critical CSS - Load synchronously -->
   <link rel="stylesheet" href="static/css/bulma.min.css">
