--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
           <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
             <figure class="image"
               style="width: 150px; height: 170px; display: flex; align-items: center; justify-content: center;">
-              <img src="static/images/bysmwk.png.jpg" alt="Hightech Agenda Bayern"
+              <img src="static/images/StMWK_Logo.png" alt="Hightech Agenda Bayern"
                 style="max-height:80px; max-width:130px; object-fit:contain;">
             </figure>
           </div>
