--- a/index.html
+++ b/index.html
@@ -564,36 +564,32 @@
         <h2 class="title is-4">Funded by:</h2>
         <div class="columns is-centered is-multiline is-vcentered" style="margin-top: 1.5rem;">
 
-          <!-- HTA (slightly larger, like AIMotion) -->
-          <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
-            <figure class="image"
-              style="width: 170px; height: 110px; display: flex; align-items: center; justify-content: center;">
+          <!-- HTA -->
+          <div class="column is-narrow has-text-centered">
+            <figure class="image" style="width:200px; display:flex; justify-content:center;">
               <img src="static/images/hta.png" alt="Hightech Agenda Bayern"
-                style="max-height:95px; max-width:150px; object-fit:contain;">
+                style="max-height:140px; object-fit:contain;">
             </figure>
           </div>
 
           <!-- BMDV -->
-          <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
-            <figure class="image"
-              style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
-              <img src="static/images/bmdv.png" alt="Bundesministerium für Digitales und Verkehr"
-                style="max-height:80px; max-width:130px; object-fit:contain;">
+          <div class="column is-narrow has-text-centered">
+            <figure class="image" style="width:200px; display:flex; justify-content:center;">
+              <img src="static/images/bmdv.png" alt="BMDV" style="max-height:140px; object-fit:contain;">
             </figure>
           </div>
 
-          <!-- StMWK Bayern -->
-          <div class="column is-narrow" style="display: flex; justify-content: center; align-items: center;">
-            <figure class="image"
-              style="width: 150px; height: 100px; display: flex; align-items: center; justify-content: center;">
-              <img src="static/images/StMWK_Logo.png" alt="Bayerisches Staatsministerium für Wissenschaft und Kunst"
-                style="max-height:80px; max-width:130px; object-fit:contain;">
+          <!-- StMWK -->
+          <div class="column is-narrow has-text-centered">
+            <figure class="image" style="width:200px; display:flex; justify-content:center;">
+              <img src="static/images/StMWK_Logo.png" alt="StMWK Bayern" style="max-height:140px; object-fit:contain;">
             </figure>
           </div>
 
         </div>
       </div>
     </section>
+
 
 
     <section class="section" style="background-color: white;">
