add baywiss and edit others

--- a/index.html
+++ b/index.html
@@ -575,17 +575,24 @@
           <!-- BMDV -->
           <div class="column is-narrow has-text-centered">
             <figure class="image" style="width:200px; display:flex; justify-content:center;">
-              <img src="static/images/bmdv.png" alt="BMDV" style="max-height:140px; object-fit:contain;">
+              <img src="static/images/1024px-Bundesministerium_für_Verkehr_und_digitale_Infrastruktur_Logo.svg.png"
+                alt="BMDV" style="max-height:140px; object-fit:contain;">
             </figure>
           </div>
 
           <!-- StMWK -->
           <div class="column is-narrow has-text-centered">
             <figure class="image" style="width:200px; display:flex; justify-content:center;">
-              <img src="static/images/StMWK_Logo.png" alt="StMWK Bayern" style="max-height:140px; object-fit:contain;">
+              <img src="static/images/Bild.png" alt="StMWK Bayern" style="max-height:140px; object-fit:contain;">
             </figure>
           </div>
 
+          <!-- Baywiss -->
+          <div class="column is-narrow has-text-centered">
+            <figure class="image" style="width:200px; display:flex; justify-content:center;">
+              <img src="static/images/baywiss.PNG" alt="StMWK Bayern" style="max-height:140px; object-fit:contain;">
+            </figure>
+          </div>
         </div>
       </div>
     </section>
